Slf4j number3